# AutoCursor

./: .gitignore  README.md  pyproject.toml  test_sdk.py
pycursor_agent/: __init__.py  base.py  claude.py  client.py  codex.py  cursor.py  gemini.py
test_cases/: test_claude.py  test_codex.py  test_cursor.py  test_gemini.py
test_cases/test_results_claude/: mode_test.txt  test_log.txt
test_cases/test_results_codex/: mode_test.txt  test_log.txt
test_cases/test_results_cursor/: buggy.py  context_file.txt  mode_test.txt  test_log.txt
test_cases/test_results_gemini/: buggy.py  mode_test.txt  test_log.txt
test_results/: buggy.py  mode_test.txt  test_log.txt
