[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycursor-agent"
version = "0.1.0"
description = "A Python SDK for programmatically calling Cursor's AI Agent."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Cursor Automation User" }
]
keywords = ["cursor", "ai", "agent", "automation", "sdk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["pycursor_agent"]

[project.urls]
"Homepage" = "https://github.com/linwk20/pycursor_agent"

